# axiom-arb

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
config/: axiom-arb.example.toml
crates/app-live/: Cargo.toml
crates/app-live/src/: bootstrap.rs  cli.rs  config.rs  daemon.rs  discovery.rs  dispatch.rs  input_tasks.rs  instrumentation.rs  lib.rs  main.rs  negrisk_live.rs  negrisk_shadow.rs  polymarket_probe.rs  polymarket_runtime_adapter.rs  posture.rs  queues.rs  run_session.rs  runtime.rs  smoke.rs  snapshot_meta.rs  source_tasks.rs  startup.rs  strategy_control.rs  supervisor.rs  task_groups.rs
crates/app-live/src/commands/: bootstrap.rs  discover.rs  doctor.rs  init.rs  mod.rs  run.rs
crates/app-live/src/commands/apply/: mod.rs  model.rs  output.rs  prompt.rs
crates/app-live/src/commands/bootstrap/: error.rs  flow.rs  output.rs  prompt.rs
crates/app-live/src/commands/doctor/: connectivity.rs  credentials.rs  mod.rs  report.rs  runtime_safety.rs  target_source.rs
crates/app-live/src/commands/init/: prompt.rs  render.rs  summary.rs  wizard.rs
crates/app-live/src/commands/status/: evaluate.rs  mod.rs  model.rs
crates/app-live/src/commands/targets/: adopt.rs  candidates.rs  config_file.rs  mod.rs  rollback.rs  show_current.rs  state.rs  status.rs
crates/app-live/src/commands/verify/: context.rs  evidence.rs  mod.rs  model.rs  session.rs  window.rs
crates/app-live/src/route_adapters/: fullset.rs  mod.rs  negrisk.rs
crates/app-live/src/strategy_control/: migration.rs  mod.rs  resolver.rs
crates/app-live/tests/: apply_command.rs  bootstrap_command.rs  bootstrap_modes.rs  candidate_daemon.rs  config.rs  daemon_lifecycle.rs  discover_command.rs  discovery_supervisor.rs  doctor_command.rs  fault_injection.rs  ingest_task_groups.rs  init_command.rs  main_entrypoint.rs  negrisk_live_rollout.rs  negrisk_live_submit_resume.rs  negrisk_rollout_faults.rs  real_user_shadow_smoke.rs  run_command.rs  runtime_observability.rs  startup_resolution.rs  status_command.rs  strategy_control.rs  strategy_control_migration.rs  strategy_control_resolver.rs  supervisor_observability.rs  targets_config_file.rs  targets_read_commands.rs  targets_write_commands.rs  unified_supervisor.rs  verify_command.rs
crates/app-live/tests/support/: apply_db.rs  cli.rs  discover_db.rs  mod.rs  run_session_db.rs  status_db.rs  verify_db.rs
crates/app-replay/: Cargo.toml
crates/app-replay/src/: cli.rs  lib.rs  main.rs  negrisk_candidates.rs  negrisk_summary.rs
crates/app-replay/tests/: main_entrypoint.rs  negrisk_candidates.rs  negrisk_foundation_contract.rs  negrisk_live_contract.rs  negrisk_shadow_contract.rs  negrisk_summary.rs  replay_app.rs
crates/config/: Cargo.toml
crates/config-schema/: Cargo.toml
crates/config-schema/src/: error.rs  lib.rs  raw.rs  validate.rs
crates/config-schema/tests/: config_roundtrip.rs  load_config.rs  validated_views.rs
crates/config/src/: lib.rs  settings.rs
crates/config/tests/: load_settings.rs
crates/domain/: Cargo.toml
crates/domain/src/: candidates.rs  decision.rs  execution.rs  facts.rs  identifiers.rs  inventory.rs  lib.rs  negrisk.rs  order.rs  resolution.rs  runtime_mode.rs  strategy_control.rs
crates/domain/tests/: candidate_contracts.rs  identifier_and_mode.rs  negrisk.rs  runtime_backbone.rs
crates/execution/: Cargo.toml
crates/execution/src/: attempt.rs  ctf.rs  instrumentation.rs  lib.rs  negrisk.rs  orchestrator.rs  orders.rs  plans.rs  providers.rs  signing.rs  sink.rs
crates/execution/tests/: negrisk_live_planner.rs  negrisk_live_submit.rs  (+4 more)
crates/journal/: Cargo.toml
crates/journal/src/: lib.rs  replay.rs  writer.rs
crates/journal/tests/: replay.rs
crates/observability/: Cargo.toml
crates/persistence/: Cargo.toml
crates/persistence/src/: instrumentation.rs  lib.rs  models.rs  repos.rs
crates/persistence/tests/: migrations.rs  negrisk.rs  negrisk_live.rs  operator_target_adoption.rs  phase3e_candidate_generation.rs  run_sessions.rs  runtime_backbone.rs  strategy_control.rs
crates/recovery/: Cargo.toml
crates/risk/: Cargo.toml
crates/state/: Cargo.toml
crates/strategy-fullset/: Cargo.toml
crates/strategy-negrisk/: Cargo.toml
crates/strategy-negrisk/src/: exposure.rs  graph.rs  instrumentation.rs  intent.rs  lib.rs  validator.rs
crates/strategy-negrisk/tests/: exposure.rs  graph_and_validator.rs  intent.rs
crates/venue-polymarket/: Cargo.toml
crates/venue-polymarket/src/: auth.rs  errors.rs  gateway.rs  heartbeat.rs  instrumentation.rs  l2_probe.rs  lib.rs  metadata.rs  negrisk_live.rs  orders.rs  proxy.rs  relayer.rs  rest.rs  retry.rs  ws_client.rs  ws_market.rs  ws_session.rs  ws_user.rs
crates/venue-polymarket/src/sdk_backend/: clob.rs  metadata.rs  mod.rs  relayer.rs  ws.rs
crates/venue-polymarket/tests/: auth_derivation.rs  gateway_surface.rs  heartbeat.rs  l2_probe.rs  legacy_clob_shell.rs  legacy_metadata_shell.rs  legacy_relayer_shell.rs  legacy_ws_shell.rs  metadata.rs  metadata_observability.rs  negrisk_live_provider.rs  order_submission.rs  producer_observability.rs  relayer_observability.rs  sdk_clob_gateway.rs  sdk_metadata_gateway.rs  sdk_relayer_gateway.rs  sdk_ws_gateway.rs  status_and_retry.rs  ws_client.rs  ws_feeds.rs  ws_session.rs
crates/venue-polymarket/tests/support/: mod.rs
docs/: spec_raw.md
docs/runbooks/: bootstrap-and-ramp.md  live-break-glass.md  operator-target-adoption.md  real-user-shadow-smoke.md
migrations/: 0001_workspace_core.sql  0002_orders_journal.sql  0003_inventory_resolution.sql  0004_neg_risk_foundation.sql  0005_unified_runtime_backbone.sql  0006_phase3b_negrisk_live.sql  0007_phase3b_negrisk_live_followup.sql  0008_execution_attempt_audit_anchor.sql  0009_phase3c_negrisk_live_submit_closure.sql  0010_phase3d_daemon_feed_wiring.sql  0011_phase3e_candidate_generation.sql  0012_operator_target_adoption_history.sql  0013_operator_target_adoption_history_constraints.sql  0014_run_sessions.sql  0015_strategy_neutral_control_plane.sql  0016_discover_refresh_history.sql
scripts/: real-user-shadow-smoke.sh
(+112 files in other folders)
