[workspace]
members = [
  "crates/app-live",
  "crates/app-replay",
  "crates/config",
  "crates/domain",
  "crates/journal",
  "crates/observability",
  "crates/persistence",
  "crates/recovery",
  "crates/venue-polymarket",
  "crates/state",
  "crates/strategy-negrisk",
  "crates/strategy-fullset",
  "crates/risk",
  "crates/execution",
]
resolver = "2"
