[package]
name = "app-live"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.48", features = ["derive"] }
config-schema = { path = "../config-schema" }
domain = { path = "../domain" }
execution = { path = "../execution" }
observability = { path = "../observability" }
persistence = { path = "../persistence" }
risk = { path = "../risk" }
rust_decimal = { version = "1.40.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
state = { path = "../state" }
tempfile = "3.23.0"
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
toml_edit = "0.22.27"
tracing = "0.1.41"
venue-polymarket = { path = "../venue-polymarket" }

[dev-dependencies]
chrono = "0.4"
domain = { path = "../domain" }
state = { path = "../state" }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }

[lib]
path = "src/lib.rs"
