[package]
name = "app-replay"
version = "0.1.0"
edition = "2021"

[dependencies]
journal = { path = "../journal" }
persistence = { path = "../persistence" }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }

[lib]
path = "src/lib.rs"

[dev-dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
domain = { path = "../domain" }
futures-util = "0.3.31"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
strategy-negrisk = { path = "../strategy-negrisk" }
venue-polymarket = { path = "../venue-polymarket" }
