[package]
name = "app-replay"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
config-schema = { path = "../config-schema" }
journal = { path = "../journal" }
persistence = { path = "../persistence" }
observability = { path = "../observability" }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"

[lib]
path = "src/lib.rs"

[dev-dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
domain = { path = "../domain" }
futures-util = "0.3.31"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
strategy-negrisk = { path = "../strategy-negrisk" }
venue-polymarket = { path = "../venue-polymarket" }
