[package]
name = "journal"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
serde_json = "1.0.145"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }

[lib]
path = "src/lib.rs"
