[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
domain = { path = "../domain" }
rust_decimal = "1.40.0"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["chrono", "json", "migrate", "postgres", "runtime-tokio-rustls", "rust_decimal"] }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync"] }

[lib]
path = "src/lib.rs"
