[package]
name = "venue-polymarket"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
domain = { path = "../domain" }
observability = { path = "../observability" }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.50.0", features = ["sync"] }
tracing = "0.1.41"
url = "2.5.7"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }

[lib]
path = "src/lib.rs"
