[package]
name = "venue-polymarket"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
domain = { path = "../domain" }
futures-util = "0.3.31"
observability = { path = "../observability" }
execution = { path = "../execution" }
polymarket-client-sdk = { version = "0.4.4", features = ["clob"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
sha2 = "0.10.9"
tokio = { version = "1.50.0", features = ["net", "rt-multi-thread", "sync"] }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tracing = "0.1.41"
url = "2.5.7"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
rust_decimal = "1.40.0"

[lib]
path = "src/lib.rs"
